horizontal scroll issue

--- a/src/styles/partials/_creatures.scss
+++ b/src/styles/partials/_creatures.scss
@@ -1,7 +1,7 @@
 @import '_variables.scss';
 
 .creatures {
-  width: 100vw;
+  max-width: 100vw;
   overflow-x: hidden;
   position: absolute;
   height: 11000px;
