--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -617,6 +617,8 @@ div.oceanBG .buttons .button.hide:hover::before {
 }
 
 .ruler {
+  max-width: 100vw;
+  overflow-x: hidden;
   font-family: "Cinzel Decorative", cursive;
   color: rgba(255, 255, 255, 0.7);
   pointer-events: none;
@@ -798,7 +800,7 @@ div.oceanBG .buttons .button.hide:hover::before {
 }
 
 .creatures {
-  width: 100vw;
+  max-width: 100vw;
   overflow-x: hidden;
   position: absolute;
   height: 11000px;
